# 30122-project-fantasticfour

./: README.md  mapscraper.ipynb  pyproject.toml
ChicagoLivingScore/: README.md  final.md  pyproject.toml  requirements.txt
ChicagoLivingScore/analysis/: all_data_normalize.py  chicago_zips.py  crime_data_analysis.py  crimes.py  data_all_normalize.py  data_visualization_analysis.py  economic_infrastructure_analysis.py  education_data_analysis.py  education_data_cleaner.py  env.py  environment_data_analysis.py  final_score_analysis.py  hamza_data_cleaner.py  housing_data_analysis.py  index_merge.py  information.py  school.py  zillow_data_analysis.py  zips.py
ChicagoLivingScore/data/cleaned_data/: Hamza_data_randomized.csv  Housing_Data_Final.csv  chicago_zip.csv  cleaned_data_crime.csv  cleaned_data_econ_infrastructure.csv  cleaned_data_economic_infrastructure.csv  cleaned_data_education.csv  cleaned_data_environment.csv  cleaned_education.csv  cleaned_randomized_data.csv  environmental_results.csv  final_living_score.csv  zip_code_education_results.csv
ChicagoLivingScore/data/raw_data/: Chicago_Public_Schools_2024.csv  eco_infra_census_data.csv  education.csv
ChicagoLivingScore/map/: map.py  mapbuild.py
ChicagoLivingScore/tests/: analysis_test.py  test_analysis.py  test_crimes.py  test_education.py  test_environment.py  test_mapbuild.py  test_normalize.py  test_zips.py
ChicagoLivingScore/website/: app.py
ChicagoLivingScore/website/static/: style.css
ChicagoLivingScore/website/templates/: about.html  base.html  (+3 more)
ChicagoLivingScore/zillow_scraper/: zillow.py
(+43 files in other folders)
