[project]
name = "ChicagoLivingScore"
version = "0.1.0"
description = "A Flask-based web application for analyzing Chicago living scores"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "Flask==2.2.2",
  "Werkzeug<3.0",
  "folium==0.12.1",
  "geopandas",
  "pandas",
  "shapely",
  "httpx",
  "lxml",
  "requests",
  "bs4",
  "loguru",
  # "scrapfly",
  "numpy",
  "cssselect",
  "zillow"
]


[project.scripts]
# run-app = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ChicagoLivingScore"]
